kubernetes_1/service1.yaml
apiVersion: v1
kind: Service
metadata:
    name: payment-api-service
spec:
    selector:
        app: payment-api
        version: blue
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
    type: ClusterIP
